<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:id="@+id/main_layout"
        android:orientation="vertical" >

        <TextView
          style="@style/ContentText"
          android:id="@+id/title"
          android:textSize="@dimen/title_text_size"
          android:textStyle="bold"
          android:textColor="@color/textDark"
          android:text="@string/title" />

        <!--
        <TextView
          style="@style/ContentText"
          android:id="@+id/subtitle"
          android:textColor="@color/textLight"
          android:textSize="@dimen/caption_text_size"
          android:text="@string/subtitle" />
-->
        <TextView
          style="@style/ContentText"
          android:id="@+id/paragraph1"
          android:textColor="@color/textDark"
          android:textSize="@dimen/paragragh_text_size"
          android:text="@string/paragraph1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
             <Button
            android:id="@+id/button"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:text="@string/button_explore" />

            <NumberPicker
                android:id="@+id/np"
                android:descendantFocusability="blocksDescendants"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            </LinearLayout>

        <com.google.vr.sdk.widgets.pano.VrPanoramaView
            android:id="@+id/pano_view"
            android:layout_margin="5dip"
            android:layout_width="match_parent"
            android:scrollbars="@null"
            android:layout_height="250dip"/>

        <TextView
          style="@style/ContentText"
          android:id="@+id/pano_view_caption"
          android:textColor="@color/textLight"
          android:textSize="12sp"
          android:text="@string/image_caption" />

        <com.google.vr.sdk.widgets.pano.VrPanoramaView
            android:id="@+id/pano_view2"
            android:layout_margin="5dip"
            android:layout_width="match_parent"
            android:scrollbars="@null"
            android:layout_height="250dip"/>

        <TextView
            style="@style/ContentText"
            android:id="@+id/pano_view_caption2"
            android:textColor="@color/textLight"
            android:textSize="12sp"
            android:text="@string/image_caption2" />

        <TextView
          style="@style/ContentText"
          android:id="@+id/paragraph2"
          android:textColor="@color/textDark"
          android:textSize="@dimen/paragragh_text_size"
          android:text="@string/paragraph2" />

        <TextView
          android:id="@+id/source"
          style="@style/ContentText"
          android:textColor="@color/textDark"
          android:textSize="@dimen/paragragh_text_size"/>
    </LinearLayout>
</ScrollView>
